--- a/package.json
+++ b/package.json
@@ -3,20 +3,19 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@shopify/polaris": "^13.9.5",
-    "@shopify/polaris-icons": "^7.0.0",
-    "ajv": "^8.17.1",
+    "@shopify/polaris": "^12.0.0",
+    "@shopify/polaris-icons": "^8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
-    "react-scripts": "5.0.1"
+    "react-scripts": "^5.0.1"
   },
   "devDependencies": {
     "@types/node": "^20.11.24",
     "@types/react": "^18.2.61",
     "@types/react-dom": "^18.2.19",
     "@types/react-router-dom": "^5.3.3",
-    "typescript": "^5.3.3"
+    "typescript": "^4.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
