--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@shopify/polaris": "^12.0.0",
-    "@shopify/polaris-icons": "^8.0.0",
+    "@shopify/polaris": "13.9.5",
+    "@shopify/polaris-icons": "9.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
